<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PruebaOsMeusLugares</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_lugares">MainActivity</string>
    <string name="titulo_list_lugares">Listado de Sitios</string>
    <string name="title_activity_edit_lugares">EditLugares</string>
    <string name="titulo_edit_lugar">Editor de Lugares</string>
    <string name="nombre">Nombre:</string>
    <string name="edit_categoria">Categoría</string>
    <string name="edit_direccion">Dirección:</string>
    <string name="edit_telefono">Teléfono:</string>
    <string name="edit_url">URL:</string>
    <string name="edit_comentario">Comentario:</string>
    <string name="info">Info...</string>
    <string name="titulo">Título</string>
    <string name="title_activity_editar_categoria">Editar Categoría</string>
    <string name="titulo_editar_categoria">Editor de Categorías</string>
    <string name="nombre_categoria">Nombre:</string>
    <string name="text_icono">Icono</string>
    <string name="title_activity_lista_categorias">ListaCategorias</string>

</resources>
